--- a/alura-studies/src/components/Lista/Item/Item.module.scss
+++ b/alura-studies/src/components/Lista/Item/Item.module.scss
@@ -27,7 +27,7 @@
   }
   
   .itemCompletado {
-    background-color: #566F42;
+    background-color:#566F42!important;
     cursor: auto;
   
     .concluido {
